# nam-juce

./: .gitmodules  CMakeLists.txt
assets/: CMakeLists.txt
src/: AssetManager.h  CMakeLists.txt  MyLookAndFeel.h  NamEditor.cpp  NamEditor.h  NeuralAmpModeler.cpp  NeuralAmpModeler.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  ResamplingNAM.h  StatusedTrigger.cpp  StatusedTrigger.h  ToneStack.h  TopBarComponent.cpp  TopBarComponent.h
src/CustomStandaloneWindow/: CMakeLists.txt
src/PresetManager/: CMakeLists.txt  PresetManager.cpp
